Make lib.wasm a standalone WASM
Since this WASM module only decodes zlib and qnt, most of the JS glue
code generated by emscripten is not needed. By compiling it in
STANDALONE_WASM mode and writing a small piece of code to fetch and
instantiate the wasm, we can save a lot of code size.

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -1,4 +1,5 @@
+EMFLAGS = -s STANDALONE_WASM --no-entry -s USE_ZLIB=1 -s ALLOW_MEMORY_GROWTH=1
 EXPORTS = -s EXPORTED_FUNCTIONS="['_malloc', '_free']"
 
-../docs/lib.js: qnt.c Makefile
-	emcc -Oz -s MODULARIZE=1 -s EXPORT_ES6=1 -o $@ qnt.c -s USE_ZLIB=1 $(EXPORTS)
+../docs/lib.wasm: qnt.c Makefile
+	emcc -O3 -DNDEBUG $(EMFLAGS) -o $@ qnt.c $(EXPORTS)
