--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,7 @@
         "target": "ES2017",
         "module": "ESNext",
         "strict": true,
-        "noEmit": true,
-        "paths": {
-            "https://unpkg.com/gl-matrix@3.3.0/esm/index.js": [
-                "./src/gl-matrix.d.ts"
-            ]
-        }
+        "noEmit": true
     },
     "exclude": [
         "lab",
